@@ -1,86 +1,103 @@
 package com.mpp.pharmacy.Services;
 
 import com.mpp.pharmacy.DTO.PrescriptionDTO;
-import com.mpp.pharmacy.Domain.PrescriptionDomain;
+import com.mpp.pharmacy.Entity.Person;
 import com.mpp.pharmacy.Entity.Prescription;
-import com.mpp.pharmacy.Exception.InvalidRequestException;
+import com.mpp.pharmacy.Entity.Treatment;
+import com.mpp.pharmacy.Exception.ResourceNotFoundException;
 import com.mpp.pharmacy.Mapper.PrescriptionMapper;
+import com.mpp.pharmacy.Repository.PersonRepository;
 import com.mpp.pharmacy.Repository.PrescriptionRepository;
+import com.mpp.pharmacy.Repository.TreatmentRepository;
 import com.mpp.pharmacy.RequestDTO.PrescriptionRequestDTO;
 import com.mpp.pharmacy.ServiceInterface.PrescriptionService;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 @Slf4j
-@Transactional
 public class PrescriptionServiceImpl implements PrescriptionService {
 
     private final PrescriptionRepository repository;
     private final PrescriptionMapper mapper;
-    private final PrescriptionDomain prescriptionDomain;
+    private final PersonRepository personRepository;
+    private final TreatmentRepository treatmentRepository;
 
     @Override
     public PrescriptionDTO create(PrescriptionRequestDTO request) {
-        log.info("Service: Creating prescription");
+        log.info("Creating prescription: {}", request);
 
-        if (request == null) {
-            throw new InvalidRequestException("Prescription request cannot be null");
+        Person patient = personRepository.findById(request.getPatientId())
+                .orElseThrow(() -> new ResourceNotFoundException("Patient not found: " + request.getPatientId()));
+
+        Person doctor = personRepository.findById(request.getDoctorId())
+                .orElseThrow(() -> new ResourceNotFoundException("Doctor not found: " + request.getDoctorId()));
+
+        Treatment treatment = null;
+        if (request.getTreatmentId() != null) {
+            treatment = treatmentRepository.findById(request.getTreatmentId())
+                    .orElseThrow(() -> new ResourceNotFoundException("Treatment not found: " + request.getTreatmentId()));
         }
 
-        Prescription created = prescriptionDomain.create(request);
-        return mapper.toDTO(created);
+        Prescription prescription = mapper.toEntity(request);
+        prescription.setPatient(patient);
+        prescription.setDoctor(doctor);
+        prescription.setTreatment(treatment);
+
+        Prescription saved = repository.save(prescription);
+        return mapper.toDTO(saved);
     }
 
     @Override
     public PrescriptionDTO getById(Long id) {
-        log.debug("Service: Fetching prescription with id: {}", id);
-
-        if (id == null) {
-            throw new InvalidRequestException("Prescription ID cannot be null");
-        }
-
-        Prescription prescription = prescriptionDomain.getById(id);
-        return mapper.toDTO(prescription);
+        Prescription entity = repository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Prescription not found: " + id));
+        return mapper.toDTO(entity);
     }
 
     @Override
-    @Transactional(readOnly = true)
     public List<PrescriptionDTO> getAll() {
-        log.debug("Service: Fetching all prescriptions");
         return repository.findAll().stream()
                 .map(mapper::toDTO)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
     public PrescriptionDTO update(Long id, PrescriptionRequestDTO request) {
-        log.info("Service: Updating prescription with id: {}", id);
+        Prescription existing = repository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Prescription not found: " + id));
 
-        if (id == null) {
-            throw new InvalidRequestException("Prescription ID cannot be null");
-        }
-        if (request == null) {
-            throw new InvalidRequestException("Prescription request cannot be null");
+        Person patient = personRepository.findById(request.getPatientId())
+                .orElseThrow(() -> new ResourceNotFoundException("Patient not found: " + request.getPatientId()));
+
+        Person doctor = personRepository.findById(request.getDoctorId())
+                .orElseThrow(() -> new ResourceNotFoundException("Doctor not found: " + request.getDoctorId()));
+
+        Treatment treatment = null;
+        if (request.getTreatmentId() != null) {
+            treatment = treatmentRepository.findById(request.getTreatmentId())
+                    .orElseThrow(() -> new ResourceNotFoundException("Treatment not found: " + request.getTreatmentId()));
         }
 
-        Prescription updated = prescriptionDomain.update(id, request);
-        return mapper.toDTO(updated);
+        existing.setPatient(patient);
+        existing.setDoctor(doctor);
+        existing.setTreatment(treatment);
+        existing.setPrescriptionDate(request.getPrescriptionDate());
+        existing.setNotes(request.getNotes());
+
+        return mapper.toDTO(repository.save(existing));
     }
 
     @Override
     public void delete(Long id) {
-        log.info("Service: Deleting prescription with id: {}", id);
-
-        if (id == null) {
-            throw new InvalidRequestException("Prescription ID cannot be null");
+        if (!repository.existsById(id)) {
+            throw new ResourceNotFoundException("Prescription not found: " + id);
         }
-
-        prescriptionDomain.delete(id);
+        repository.deleteById(id);
     }
 }
